--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" />
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title>D&amp;D 5e - Справочник на русском</title>
-  <!-- CSS -->
+  <!-- Quickref CSS -->
   <link rel="stylesheet" type="text/css" href="css/quickref.css">
+  <!-- Game-Icons CSS -->
   <link rel="stylesheet" type="text/css" href="css/icons.css">
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -17,7 +18,7 @@
 </head>
 
 <body class="page-background">
-  <div class="page fontsize" data-size="fullscreen">    
+  <div class="page fontsize" data-size="fullscreen">
 
     <!-- Movement section -->
     <div id="section-movement" class="section-container">
@@ -124,20 +125,6 @@
       </div>
     </div>
 
-    <!-- Travel Section -->
-    <div id="section-travel" class="section-container">
-      <div class="section-title">
-        <div id="tog-travel" class="toggler hide"></div> Путешествие
-      </div>
-
-      <div class="section-content">
-        <div class="section-row section-subtitle text fontsize">
-          Передвижение в течение долгого времени на дальние дистанции
-        </div>
-        <div class="section-row" id="travel"></div>
-      </div>
-    </div>
-
     <!-- Damage Types Section -->
     <div id="section-damage-types" class="section-container">
       <div class="section-title">
@@ -166,42 +153,42 @@
         <div id="tog-abilities" class="toggler hide"></div> Характеристики и Навыки
       </div>
       <div class="section-content">
-        <div class="section-title-reverse-crimson">
+        <div class="section-title-subtitle text">
           Сила
         </div>
         <div class="section-row section-subtitle text fontsize">
           Природный атлетизм, физическая сила.
         </div>
         <div class="section-row" id="abilities-str"></div>
-        <div class="section-title-reverse-crimson">
+        <div class="section-title-subtitle text">
           Ловкость
         </div>
         <div class="section-row section-subtitle text fontsize">
           Проворство, реакция, равновесие.
         </div>
         <div class="section-row" id="abilities-dex"></div>
-        <div class="section-title-reverse-crimson">
+        <div class="section-title-subtitle text">
           Телосложение
         </div>
         <div class="section-row section-subtitle text fontsize">
           Здоровье, выносливость, жизненная сила.
         </div>
         <div class="section-row" id="abilities-con"></div>
-        <div class="section-title-reverse-crimson">
+        <div class="section-title-subtitle text">
           Интеллект
         </div>
         <div class="section-row section-subtitle text fontsize">
           Ясность ума, память, аналитические способности.
         </div>
         <div class="section-row" id="abilities-int"></div>
-        <div class="section-title-reverse-crimson">
+        <div class="section-title-subtitle text">
           Мудрость
         </div>
         <div class="section-row section-subtitle text fontsize">
           Осведомлённость, интуиция, проницательность.
         </div>
         <div class="section-row" id="abilities-wis"></div>
-        <div class="section-title-reverse-crimson">
+        <div class="section-title-subtitle text">
           Харизма
         </div>
         <div class="section-row section-subtitle text fontsize">
@@ -211,62 +198,45 @@
       </div>
     </div>
 
-    <!-- Languages section -->
-    <div id="section-languages" class="section-container">
-      <div class="section-title">
-        <div id="tog-languages" class="toggler hide"></div> Языки
-      </div>
-      <div class="section-content">
-        <div class="section-title-reverse-purple">
-          Распространённые языки
-        </div>
-        <div class="section-row" id="languages-standard"></div>
-        <div class="section-title-reverse-purple">
-          Экзотические языки
-        </div>
-        <div class="section-row" id="languages-exotic"></div>
-      </div>
-    </div>
-
     <!-- Class Abilities section -->
     <div id="section-classabilities" class="section-container">
       <div class="section-title">
         <div id="tog-classabilities" class="toggler hide"></div> Активные классовые умения
       </div>
       <div class="section-content">
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Варвар
         </div>
         <div class="section-row" id="class-abilities-barbarian"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Бард
         </div>
         <div class="section-row" id="class-abilities-bard"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Жрец
         </div>
         <div class="section-row" id="class-abilities-cleric"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Друид
         </div>
         <div class="section-row" id="class-abilities-druid"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Воин
         </div>
         <div class="section-row" id="class-abilities-fighter"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Монах
         </div>
         <div class="section-row" id="class-abilities-monk"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Паладин
         </div>
         <div class="section-row" id="class-abilities-paladin"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Следопыт
         </div>
         <div class="section-row" id="class-abilities-ranger"></div>
-        <div class="section-title-reverse-maroon">
+        <div class="section-title-subtitle text">
           Плут
         </div>
         <div class="section-row" id="class-abilities-rogue"></div>
@@ -291,11 +261,11 @@
         <div id="tog-spellcasting" class="toggler hide"></div> Заклинания
       </div>
       <div class="section-content">
-        <div class="section-title-reverse-spellcasting">
+        <div class="section-title-subtitle text">
           Информация о заклинаниях
         </div>
         <div class="section-row" id="spellcasting-spellinfo"></div>
-        <div class="section-title-reverse-spellcasting">
+        <div class="section-title-subtitle text">
           Наложение заклинаний
         </div>
         <div class="section-row" id="spellcasting-casting"></div>
@@ -308,15 +278,15 @@
         <div id="tog-multiclassing" class="toggler hide"></div> Мультиклассирование
       </div>
       <div class="section-content">
-        <div class="section-title-reverse-multiclassing">
+        <div class="section-title-subtitle text">
           Требования мультиклассирования
         </div>
         <div class="section-row" id="multiclassing-classreqs"></div>
-        <div class="section-title-reverse-multiclassing">
+        <div class="section-title-subtitle text">
           Особенности умений при мультиклассировании
         </div>
         <div class="section-row" id="multiclassing-classfeats-reg"></div>
-        <div class="section-row section-subtitle text fontsize">
+        <div class="section-title-subtitle text">
           Использование классов заклинателей при мультиклассировании
         </div>
         <div class="section-row" id="multiclassing-classfeats-casting"></div>
@@ -329,11 +299,11 @@
         <div id="tog-equipment" class="toggler hide"></div> Снаряжение
       </div>
       <div class="section-content">
-        <div class="section-title-reverse-sienna">
+        <div class="section-title-subtitle text">
           Наборы снаряжения
         </div>
         <div class="section-row" id="equipment-packs"></div>
-        <div class="section-title-reverse-sienna">
+        <div class="section-title-subtitle text">
           Инструменты
         </div>
         <div class="section-row section-subtitle text fontsize">
@@ -344,7 +314,7 @@
           Инструменты ремесленников
         </div>
         <div class="section-row" id="equipment-tools-artisan"></div>
-        <div class="section-title-reverse-sienna">
+        <div class="section-title-subtitle text">
           Оружие
         </div>
         <div class="section-row section-subtitle text fontsize">
@@ -353,6 +323,38 @@
         <div class="section-row" id="equipment-weap-prop"></div>
       </div>
     </div>
+
+    <!-- Travel Section -->
+    <div id="section-travel" class="section-container">
+      <div class="section-title">
+        <div id="tog-travel" class="toggler hide"></div> Путешествие
+      </div>
+
+      <div class="section-content">
+        <div class="section-row section-subtitle text fontsize">
+          Передвижение в течение долгого времени на дальние дистанции
+        </div>
+        <div class="section-row" id="travel"></div>
+      </div>
+    </div>
+
+    <!-- Languages section -->
+    <div id="section-languages" class="section-container">
+      <div class="section-title">
+        <div id="tog-languages" class="toggler hide"></div> Язык
+      </div>
+      <div class="section-content">
+        <div class="section-title-subtitle text">
+          Распространённые языки
+        </div>
+        <div class="section-row" id="languages-standard"></div>
+        <div class="section-title-subtitle text">
+          Экзотические языки
+        </div>
+        <div class="section-row" id="languages-exotic"></div>
+      </div>
+    </div>
+
 
     <!-- XP section -->
     <div id="section-xp" class="section-container">
