--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Javascript -->
     <script type="text/javascript" src="js/jquery/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/collapsebutton.js" charset="utf-8"></script>
+	<script type="text/javascript" src ="//instabot-widget.qa.rokolabs.com/jsapi/rokoInstabot.js">
+	apiKey: "ojB0zFGbXqieCmQoJ49yLq5qspbHW+UJ1IHQ67jjz5c="
+	</script>
 </head>
 
 <body class="page-background">
