Added ability scores/modifiers info

--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
             </div>
             <div class="section-content">
                 <div class="section-title-subtitle text">
+                    Характеристики
+                </div>
+                <div class="section-row section-subtitle text fontsize">
+                    Общая информация о характеристиках
+                </div>
+                <div class="section-row" id="abilities-characteristics"></div>
+                <div class="section-title-subtitle text">
                     Сила
                 </div>
                 <div class="section-row section-subtitle text fontsize">
