--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html charset="utf-8" lang="ru">
 
 <head>
-    <meta charset="utf-8" />
+    <meta />
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>D&amp;D 5e - Справочник на русском</title>
-    <!-- Quickref CSS -->
+
     <link rel="stylesheet" type="text/css" href="css/quickref.css">
-    <!-- Game-Icons CSS -->
     <link rel="stylesheet" type="text/css" href="css/icons.css">
-    <!-- Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
-    <!-- Javascript -->
-    <script type="text/javascript" src="js/jquery/jquery.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/collapsebutton.js" charset="utf-8"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/collapsebutton.js"></script>
 </head>
 
-<body class="page-background">
-    <div class="page fontsize" data-size="fullscreen">
+<body>
+    <div class="page" data-size="fullscreen">
 
-        <!-- Movement section -->
+        <!-- Movement -->
         <div id="section-movement" class="section-container">
             <div class="section-title">
                 <div id="tog-movement" class="toggler hide"></div> Движение<span class="float-right">ограничено скоростью</span>
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Вы можете передвигаться в любое время вашего хода (до, после или во время действий).
                 </div>
                 <div class="section-row" id="basic-movement">
@@ -34,7 +30,7 @@
             </div>
         </div>
 
-        <!-- Action section -->
+        <!-- Actions -->
         <div id="section-action" class="section-container">
             <div class="section-title">
                 <div id="tog-action" class="toggler hide"></div> Действие <span class="float-right">1/ход</span>
@@ -44,88 +40,84 @@
             </div>
         </div>
 
-        <!-- Bonus Action section -->
+        <!-- Bonus Actions -->
         <div id="section-bonus-action" class="section-container">
             <div class="section-title">
                 <div id="tog-bonus-action" class="toggler hide"></div> Бонусное действие <span class="float-right">макс. 1/ход</span>
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    Разнообразные классовые умения, заклинания и прочие эффекты позволяют
-                    вам совершать в ход дополнительное бонусное действие.
+                <div class="section-row section-subtitle text">
+                    Разнообразные классовые умения, заклинания и прочие эффекты позволяют вам совершать в ход дополнительное бонусное действие.
                 </div>
                 <div class="section-row" id="basic-bonus-actions"></div>
             </div>
         </div>
 
-        <!-- Reaction section -->
+        <!-- Reactions -->
         <div id="section-reaction" class="section-container">
             <div class="section-title">
                 <div id="tog-reaction" class="toggler hide"></div> Реакция <span class="float-right">макс. 1/раунд</span>
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    Реакция — это мгновенный ответ на срабатывание некоего условия, который может
-                    происходить как в ваш, так и в чужой ход.
+                <div class="section-row section-subtitle text">
+                    Реакция — это мгновенный ответ на срабатывание некоего условия, который может происходить как в ваш, так и в чужой ход.
                 </div>
                 <div class="section-row" id="basic-reactions"></div>
             </div>
         </div>
 
-        <!-- Free Action section -->
+        <!-- Free Actions -->
         <div id="section-free-action" class="section-container">
             <div class="section-title">
                 <div id="tog-free-action" class="toggler hide"></div> Свободное действие
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Свободное действие может быть совершено в ваш ход без затраты основного.
                 </div>
                 <div class="section-row" id="basic-free-actions"></div>
             </div>
         </div>
 
-        <!-- Condition section -->
+        <!-- Conditions -->
         <div id="section-condition" class="section-container">
             <div class="section-title">
                 <div id="tog-condition" class="toggler hide"></div> Состояние
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    Состояния различными способами изменяют возможности существа и
-                    могут являться следствием заклинания, классового умения, атаки
-                    чудовища или другого эффекта.
+                <div class="section-row section-subtitle text">
+                    Состояния различными способами изменяют возможности существа и могут являться следствием заклинания, классового умения, атаки чудовища или другого эффекта.
                 </div>
                 <div class="section-row" id="basic-conditions"></div>
             </div>
         </div>
 
-        <!-- Environmental section -->
+        <!-- Environment -->
         <div id="section-environment" class="section-container">
             <div class="section-title">
                 <div id="tog-environment" class="toggler hide"></div> Окружающая среда
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Эффекты местности, которые сильно затрудняют видимость, передвижение и другие действия.
                 </div>
                 <div class="section-row" id="environment-obscurance"></div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Наличие или отсутствие света создаёт три категории освещения: яркий свет, тусклый свет и тьму.
                 </div>
                 <div class="section-row" id="environment-light"></div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Некоторые существа обладают экстраординарными чувствами, что позволяет им выживать в сложных условиях.
                 </div>
                 <div class="section-row" id="environment-vision"></div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Препятствия могут создавать укрытие, давая преимущество в защите.
                 </div>
                 <div class="section-row" id="environment-cover"></div>
             </div>
         </div>
 
-        <!-- Damage Types Section -->
+        <!-- Damage Types -->
         <div id="section-damage-types" class="section-container">
             <div class="section-title">
                 <div id="tog-damage-types" class="toggler hide"></div> Урон и атака
@@ -135,7 +127,7 @@
             </div>
         </div>
 
-        <!-- Health, Dying, and Resting Section -->
+        <!-- Health, Dying, Resting -->
         <div id="section-damage-healing" class="section-container">
             <div class="section-title">
                 <div id="tog-damage-healing" class="toggler hide"></div> Хиты, Смерть и Отдых
@@ -147,7 +139,7 @@
             </div>
         </div>
 
-        <!-- Ability Scores/Skills Section -->
+        <!-- Ability Scores and Skills  -->
         <div id="section-abilities" class="section-container">
             <div class="section-title">
                 <div id="tog-abilities" class="toggler hide"></div> Характеристики и Навыки
@@ -156,56 +148,56 @@
                 <div class="section-title-subtitle text">
                     Характеристики
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Общая информация о характеристиках
                 </div>
                 <div class="section-row" id="abilities-characteristics"></div>
                 <div class="section-title-subtitle text">
                     Сила
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Природный атлетизм, физическая сила.
                 </div>
                 <div class="section-row" id="abilities-str"></div>
                 <div class="section-title-subtitle text">
                     Ловкость
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Проворство, реакция, равновесие.
                 </div>
                 <div class="section-row" id="abilities-dex"></div>
                 <div class="section-title-subtitle text">
                     Телосложение
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Здоровье, выносливость, жизненная сила.
                 </div>
                 <div class="section-row" id="abilities-con"></div>
                 <div class="section-title-subtitle text">
                     Интеллект
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Ясность ума, память, аналитические способности.
                 </div>
                 <div class="section-row" id="abilities-int"></div>
                 <div class="section-title-subtitle text">
                     Мудрость
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Осведомлённость, интуиция, проницательность.
                 </div>
                 <div class="section-row" id="abilities-wis"></div>
                 <div class="section-title-subtitle text">
                     Харизма
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Уверенность, красноречие, лидерство.
                 </div>
                 <div class="section-row" id="abilities-cha"></div>
             </div>
         </div>
 
-        <!-- Class Abilities section -->
+        <!-- Class Features -->
         <div id="section-classabilities" class="section-container">
             <div class="section-title">
                 <div id="tog-classabilities" class="toggler hide"></div> Активные классовые умения
@@ -262,7 +254,7 @@
             </div>
         </div>
 
-        <!--Spellcasting section-->
+        <!-- Spellcasting -->
         <div id="section-spellcasting" class="section-container">
             <div class="section-title">
                 <div id="tog-spellcasting" class="toggler hide"></div> Заклинания
@@ -279,7 +271,7 @@
             </div>
         </div>
 
-        <!--Multiclassing section-->
+        <!-- Multiclassing -->
         <div id="section-multiclassing" class="section-container">
             <div class="section-title">
                 <div id="tog-multiclassing" class="toggler hide"></div> Мультиклассирование
@@ -300,7 +292,7 @@
             </div>
         </div>
 
-        <!-- Equipment section -->
+        <!-- Equipment -->
         <div id="section-equipment" class="section-container">
             <div class="section-title">
                 <div id="tog-equipment" class="toggler hide"></div> Снаряжение
@@ -313,39 +305,39 @@
                 <div class="section-title-subtitle text">
                     Инструменты
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Обычные инструменты
                 </div>
                 <div class="section-row" id="equipment-tools-norm"></div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Инструменты ремесленников
                 </div>
                 <div class="section-row" id="equipment-tools-artisan"></div>
                 <div class="section-title-subtitle text">
                     Оружие
                 </div>
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Свойства оружия
                 </div>
                 <div class="section-row" id="equipment-weap-prop"></div>
             </div>
         </div>
 
-        <!-- Travel Section -->
+        <!-- Travel -->
         <div id="section-travel" class="section-container">
             <div class="section-title">
                 <div id="tog-travel" class="toggler hide"></div> Путешествие
             </div>
 
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
+                <div class="section-row section-subtitle text">
                     Передвижение в течение долгого времени на дальние дистанции
                 </div>
                 <div class="section-row" id="travel"></div>
             </div>
         </div>
 
-        <!-- Languages section -->
+        <!-- Languages -->
         <div id="section-languages" class="section-container">
             <div class="section-title">
                 <div id="tog-languages" class="toggler hide"></div> Язык
@@ -363,7 +355,7 @@
         </div>
 
 
-        <!-- XP section -->
+        <!-- XP -->
         <div id="section-xp" class="section-container">
             <div class="section-title">
                 <div id="tog-xp" class="toggler hide"></div> Опыт
@@ -398,23 +390,23 @@
         </div>
 
         <!-- Data -->
-        <script type="text/javascript" src="js/data_movement.js" charset="utf-8"></script>
-        <script type="text/javascript" src="js/data_action.js" charset="utf-8"></script>
-        <script type="text/javascript" src="js/data_freeaction.js" charset="utf-8"></script>
-        <script type="text/javascript" src="js/data_bonusaction.js" charset="utf-8"></script>
-        <script type="text/javascript" src="js/data_reaction.js" charset="utf-8"></script>
-        <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
-        <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_xp.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_damage.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_abilities.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_travel.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_languages.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_equipment.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_classabilities.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_spellcasting.js" charset="utf-8"></script>
-        <Script type="text/javascript" src="js/data_multiclassing.js" charset="utf-8"></script>
-        <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
+        <script type="text/javascript" src="js/data_movement.js"></script>
+        <script type="text/javascript" src="js/data_action.js"></script>
+        <script type="text/javascript" src="js/data_freeaction.js"></script>
+        <script type="text/javascript" src="js/data_bonusaction.js"></script>
+        <script type="text/javascript" src="js/data_reaction.js"></script>
+        <script type="text/javascript" src="js/data_condition.js"></script>
+        <script type="text/javascript" src="js/data_environment.js"></script>
+        <Script type="text/javascript" src="js/data_xp.js"></script>
+        <Script type="text/javascript" src="js/data_damage.js"></script>
+        <Script type="text/javascript" src="js/data_abilities.js"></script>
+        <Script type="text/javascript" src="js/data_travel.js"></script>
+        <Script type="text/javascript" src="js/data_languages.js"></script>
+        <Script type="text/javascript" src="js/data_equipment.js"></script>
+        <Script type="text/javascript" src="js/data_classabilities.js"></script>
+        <Script type="text/javascript" src="js/data_spellcasting.js"></script>
+        <Script type="text/javascript" src="js/data_multiclassing.js"></script>
+        <script type="text/javascript" src="js/quickref.js"></script>
 </body>
 
 </html>
