--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Reactions -->
         <div id="section-reaction" class="section-container">
             <div class="section-title">
-                <div id="tog-reaction" class="toggler hide"></div> Реакция <span class="float-right">1 до начала след. хода</span>
+                <div id="tog-reaction" class="toggler hide"></div> Реакция <span class="float-right">1 до вашего след. хода</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text">
