--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta />
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>D&amp;D 5e - Справочник на русском</title>
-
+    <title>D&D 5e - Справочник на русском языке</title>
+    <meta name="description" content="Краткая справка по основным механикам Dungeons & Dragons 5e."/>
     <link rel="stylesheet" type="text/css" href="css/quickref.css">
     <link rel="stylesheet" type="text/css" href="css/icons.css">
 
@@ -239,18 +239,6 @@
                     Плут
                 </div>
                 <div class="section-row" id="class-abilities-rogue"></div>
-                <!--<div class="section-title-reverse-maroon">
-                    Чародей
-                  </div>
-                  <div class="section-row" id="class-abilities-sorcerer"></div>
-                  <div class="section-title-reverse-maroon">
-                    Колдун
-                  </div>
-                  <div class="section-row" id="class-abilities-warlock"></div>
-                <div class="section-title-reverse-maroon">
-                    Волшебник
-                  </div>
-                  <div class="section-row" id="class-abilities-wizard"></div>-->
             </div>
         </div>
 
