Redirect to the new version

--- a/index.html
+++ b/index.html
@@ -1,400 +1,5 @@
 <!DOCTYPE html>
-<html charset="utf-8" lang="ru">
-
-<head>
-    <meta />
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>D&D 5e - Справочник на русском языке</title>
-    <meta name="description" content="Краткая справка по основным механикам Dungeons & Dragons 5e."/>
-    <link rel="stylesheet" type="text/css" href="css/quickref.css">
-    <link rel="stylesheet" type="text/css" href="css/icons.css">
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="js/collapsebutton.js"></script>
-</head>
-
-<body>
-    <div class="page" data-size="fullscreen">
-
-        <!-- Movement -->
-        <div id="section-movement" class="section-container">
-            <div class="section-title">
-                <div id="tog-movement" class="toggler hide"></div> Движение<span class="float-right">ограничено скоростью</span>
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text">
-                    Вы можете передвигаться в любое время вашего хода (до, после или во время действий).
-                </div>
-                <div class="section-row" id="basic-movement">
-                </div>
-            </div>
-        </div>
-
-        <!-- Actions -->
-        <div id="section-action" class="section-container">
-            <div class="section-title">
-                <div id="tog-action" class="toggler hide"></div> Действие <span class="float-right">1/ход</span>
-            </div>
-            <div class="section-content">
-                <div class="section-row" id="basic-actions"></div>
-            </div>
-        </div>
-
-        <!-- Bonus Actions -->
-        <div id="section-bonus-action" class="section-container">
-            <div class="section-title">
-                <div id="tog-bonus-action" class="toggler hide"></div> Бонусное действие <span class="float-right">макс. 1/ход</span>
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text">
-                    Разнообразные классовые умения, заклинания и прочие эффекты позволяют вам совершать в ход дополнительное бонусное действие.
-                </div>
-                <div class="section-row" id="basic-bonus-actions"></div>
-            </div>
-        </div>
-
-        <!-- Reactions -->
-        <div id="section-reaction" class="section-container">
-            <div class="section-title">
-                <div id="tog-reaction" class="toggler hide"></div> Реакция <span class="float-right">1 до вашего след. хода</span>
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text">
-                    Реакция — это мгновенный ответ на срабатывание некоего условия, который может происходить как в ваш, так и в чужой ход.
-                </div>
-                <div class="section-row" id="basic-reactions"></div>
-            </div>
-        </div>
-
-        <!-- Free Actions -->
-        <div id="section-free-action" class="section-container">
-            <div class="section-title">
-                <div id="tog-free-action" class="toggler hide"></div> Свободное действие
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text">
-                    Свободное действие может быть совершено в ваш ход без затраты основного.
-                </div>
-                <div class="section-row" id="basic-free-actions"></div>
-            </div>
-        </div>
-
-        <!-- Conditions -->
-        <div id="section-condition" class="section-container">
-            <div class="section-title">
-                <div id="tog-condition" class="toggler hide"></div> Состояние
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text">
-                    Состояния различными способами изменяют возможности существа и могут являться следствием заклинания, классового умения, атаки чудовища или другого эффекта.
-                </div>
-                <div class="section-row" id="basic-conditions"></div>
-            </div>
-        </div>
-
-        <!-- Environment -->
-        <div id="section-environment" class="section-container">
-            <div class="section-title">
-                <div id="tog-environment" class="toggler hide"></div> Окружающая среда
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text">
-                    Эффекты местности, которые сильно затрудняют видимость, передвижение и другие действия.
-                </div>
-                <div class="section-row" id="environment-obscurance"></div>
-                <div class="section-row section-subtitle text">
-                    Наличие или отсутствие света создаёт три категории освещения: яркий свет, тусклый свет и тьму.
-                </div>
-                <div class="section-row" id="environment-light"></div>
-                <div class="section-row section-subtitle text">
-                    Некоторые существа обладают экстраординарными чувствами, что позволяет им выживать в сложных условиях.
-                </div>
-                <div class="section-row" id="environment-vision"></div>
-                <div class="section-row section-subtitle text">
-                    Препятствия могут создавать укрытие, давая преимущество в защите.
-                </div>
-                <div class="section-row" id="environment-cover"></div>
-            </div>
-        </div>
-
-        <!-- Damage Types -->
-        <div id="section-damage-types" class="section-container">
-            <div class="section-title">
-                <div id="tog-damage-types" class="toggler hide"></div> Урон и атака
-            </div>
-            <div class="section-content">
-                <div class="section-row" id="damage-types"></div>
-            </div>
-        </div>
-
-        <!-- Health, Dying, Resting -->
-        <div id="section-damage-healing" class="section-container">
-            <div class="section-title">
-                <div id="tog-damage-healing" class="toggler hide"></div> Хиты, Смерть и Отдых
-            </div>
-            <div class="section-content">
-                <div class="section-row" id="damage-health"></div>
-                <div class="section-row" id="damage-death"></div>
-                <div class="section-row" id="damage-resting"></div>
-            </div>
-        </div>
-
-        <!-- Ability Scores and Skills  -->
-        <div id="section-abilities" class="section-container">
-            <div class="section-title">
-                <div id="tog-abilities" class="toggler hide"></div> Характеристики и Навыки
-            </div>
-            <div class="section-content">
-                <div class="section-title-subtitle text">
-                    Характеристики
-                </div>
-                <div class="section-row section-subtitle text">
-                    Общая информация о характеристиках
-                </div>
-                <div class="section-row" id="abilities-characteristics"></div>
-                <div class="section-title-subtitle text">
-                    Сила
-                </div>
-                <div class="section-row section-subtitle text">
-                    Природный атлетизм, физическая сила.
-                </div>
-                <div class="section-row" id="abilities-str"></div>
-                <div class="section-title-subtitle text">
-                    Ловкость
-                </div>
-                <div class="section-row section-subtitle text">
-                    Проворство, реакция, равновесие.
-                </div>
-                <div class="section-row" id="abilities-dex"></div>
-                <div class="section-title-subtitle text">
-                    Телосложение
-                </div>
-                <div class="section-row section-subtitle text">
-                    Здоровье, выносливость, жизненная сила.
-                </div>
-                <div class="section-row" id="abilities-con"></div>
-                <div class="section-title-subtitle text">
-                    Интеллект
-                </div>
-                <div class="section-row section-subtitle text">
-                    Ясность ума, память, аналитические способности.
-                </div>
-                <div class="section-row" id="abilities-int"></div>
-                <div class="section-title-subtitle text">
-                    Мудрость
-                </div>
-                <div class="section-row section-subtitle text">
-                    Осведомлённость, интуиция, проницательность.
-                </div>
-                <div class="section-row" id="abilities-wis"></div>
-                <div class="section-title-subtitle text">
-                    Харизма
-                </div>
-                <div class="section-row section-subtitle text">
-                    Уверенность, красноречие, лидерство.
-                </div>
-                <div class="section-row" id="abilities-cha"></div>
-            </div>
-        </div>
-
-        <!-- Class Features -->
-        <div id="section-classabilities" class="section-container">
-            <div class="section-title">
-                <div id="tog-classabilities" class="toggler hide"></div> Активные классовые умения
-            </div>
-            <div class="section-content">
-                <div class="section-title-subtitle text">
-                    Варвар
-                </div>
-                <div class="section-row" id="class-abilities-barbarian"></div>
-                <div class="section-title-subtitle text">
-                    Бард
-                </div>
-                <div class="section-row" id="class-abilities-bard"></div>
-                <div class="section-title-subtitle text">
-                    Жрец
-                </div>
-                <div class="section-row" id="class-abilities-cleric"></div>
-                <div class="section-title-subtitle text">
-                    Друид
-                </div>
-                <div class="section-row" id="class-abilities-druid"></div>
-                <div class="section-title-subtitle text">
-                    Воин
-                </div>
-                <div class="section-row" id="class-abilities-fighter"></div>
-                <div class="section-title-subtitle text">
-                    Монах
-                </div>
-                <div class="section-row" id="class-abilities-monk"></div>
-                <div class="section-title-subtitle text">
-                    Паладин
-                </div>
-                <div class="section-row" id="class-abilities-paladin"></div>
-                <div class="section-title-subtitle text">
-                    Следопыт
-                </div>
-                <div class="section-row" id="class-abilities-ranger"></div>
-                <div class="section-title-subtitle text">
-                    Плут
-                </div>
-                <div class="section-row" id="class-abilities-rogue"></div>
-            </div>
-        </div>
-
-        <!-- Spellcasting -->
-        <div id="section-spellcasting" class="section-container">
-            <div class="section-title">
-                <div id="tog-spellcasting" class="toggler hide"></div> Заклинания
-            </div>
-            <div class="section-content">
-                <div class="section-title-subtitle text">
-                    Информация о заклинаниях
-                </div>
-                <div class="section-row" id="spellcasting-spellinfo"></div>
-                <div class="section-title-subtitle text">
-                    Наложение заклинаний
-                </div>
-                <div class="section-row" id="spellcasting-casting"></div>
-            </div>
-        </div>
-
-        <!-- Multiclassing -->
-        <div id="section-multiclassing" class="section-container">
-            <div class="section-title">
-                <div id="tog-multiclassing" class="toggler hide"></div> Мультиклассирование
-            </div>
-            <div class="section-content">
-                <div class="section-title-subtitle text">
-                    Требования мультиклассирования
-                </div>
-                <div class="section-row" id="multiclassing-classreqs"></div>
-                <div class="section-title-subtitle text">
-                    Особенности умений при мультиклассировании
-                </div>
-                <div class="section-row" id="multiclassing-classfeats-reg"></div>
-                <div class="section-title-subtitle text">
-                    Использование классов заклинателей при мультиклассировании
-                </div>
-                <div class="section-row" id="multiclassing-classfeats-casting"></div>
-            </div>
-        </div>
-
-        <!-- Equipment -->
-        <div id="section-equipment" class="section-container">
-            <div class="section-title">
-                <div id="tog-equipment" class="toggler hide"></div> Снаряжение
-            </div>
-            <div class="section-content">
-                <div class="section-title-subtitle text">
-                    Наборы снаряжения
-                </div>
-                <div class="section-row" id="equipment-packs"></div>
-                <div class="section-title-subtitle text">
-                    Инструменты
-                </div>
-                <div class="section-row section-subtitle text">
-                    Обычные инструменты
-                </div>
-                <div class="section-row" id="equipment-tools-norm"></div>
-                <div class="section-row section-subtitle text">
-                    Инструменты ремесленников
-                </div>
-                <div class="section-row" id="equipment-tools-artisan"></div>
-                <div class="section-title-subtitle text">
-                    Оружие
-                </div>
-                <div class="section-row section-subtitle text">
-                    Свойства оружия
-                </div>
-                <div class="section-row" id="equipment-weap-prop"></div>
-            </div>
-        </div>
-
-        <!-- Travel -->
-        <div id="section-travel" class="section-container">
-            <div class="section-title">
-                <div id="tog-travel" class="toggler hide"></div> Путешествие
-            </div>
-
-            <div class="section-content">
-                <div class="section-row section-subtitle text">
-                    Передвижение в течение долгого времени на дальние дистанции
-                </div>
-                <div class="section-row" id="travel"></div>
-            </div>
-        </div>
-
-        <!-- Languages -->
-        <div id="section-languages" class="section-container">
-            <div class="section-title">
-                <div id="tog-languages" class="toggler hide"></div> Язык
-            </div>
-            <div class="section-content">
-                <div class="section-title-subtitle text">
-                    Распространённые языки
-                </div>
-                <div class="section-row" id="languages-standard"></div>
-                <div class="section-title-subtitle text">
-                    Экзотические языки
-                </div>
-                <div class="section-row" id="languages-exotic"></div>
-            </div>
-        </div>
-
-
-        <!-- XP -->
-        <div id="section-xp" class="section-container">
-            <div class="section-title">
-                <div id="tog-xp" class="toggler hide"></div> Опыт
-            </div>
-            <div class="section-content">
-                <div class="section-row" id="xp"></div>
-            </div>
-        </div>
-
-        <!-- Modal -->
-        <div class="modal" id="modal" tabindex="-1">
-            <div class="modal-backdrop" id="modal-backdrop">
-                <div class="modal-dialog modalsize">
-                    <div class="section-container modal-container" id="modal-container">
-                        <div class="section-title" id="modal-title">
-                            Modal title<span class="float-right">Action</span>
-                        </div>
-                        <div class="section-content">
-                            <div class="section-row section-subtitle text" id="modal-subtitle">
-                                Subtitle
-                            </div>
-                            <div class="section-row text">
-                                <div id="modal-bullets">
-                                </div>
-                            </div>
-                            <div class="section-row text" id="modal-reference">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Data -->
-        <script type="text/javascript" src="js/data_movement.js"></script>
-        <script type="text/javascript" src="js/data_action.js"></script>
-        <script type="text/javascript" src="js/data_freeaction.js"></script>
-        <script type="text/javascript" src="js/data_bonusaction.js"></script>
-        <script type="text/javascript" src="js/data_reaction.js"></script>
-        <script type="text/javascript" src="js/data_condition.js"></script>
-        <script type="text/javascript" src="js/data_environment.js"></script>
-        <Script type="text/javascript" src="js/data_xp.js"></script>
-        <Script type="text/javascript" src="js/data_damage.js"></script>
-        <Script type="text/javascript" src="js/data_abilities.js"></script>
-        <Script type="text/javascript" src="js/data_travel.js"></script>
-        <Script type="text/javascript" src="js/data_languages.js"></script>
-        <Script type="text/javascript" src="js/data_equipment.js"></script>
-        <Script type="text/javascript" src="js/data_classabilities.js"></script>
-        <Script type="text/javascript" src="js/data_spellcasting.js"></script>
-        <Script type="text/javascript" src="js/data_multiclassing.js"></script>
-        <script type="text/javascript" src="js/quickref.js"></script>
-</body>
-
-</html>
+<meta charset="utf-8" />
+<title>Redirecting to https://5e.ruleplaying.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://5e.ruleplaying.com/" />
+<link rel="canonical" href="https://5e.ruleplaying.com/" />
